LU-3584 osd-zfs: error check dmu_tx_hold_sa

Add extra error checking around call to dmu_tx_hold_sa to ensure that
it succeeds.

Update lbuild target to include necessary zfs fixes (update to version
0.6.2)

Test-Parameters: testlist=racer mdsfilesystemtype=zfs  mdtfilesystemtype=zfs ostfilesystemtype=zfs
Signed-off-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Change-Id: Id9dd9aed5a50a3b6febdddcbcc0d238229bb031f
Reviewed-on: http://review.whamcloud.com/7090
Reviewed-by: Li Wei <wei.g.li@intel.com>
Tested-by: Hudson
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>